updates, add smc and iwann

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -152,6 +152,17 @@ doi = {10.1109/TNSRE.2020.3044947},
 url = {https://doi.org/10.1109/TNSRE.2020.3044947}
 }
 
+@inproceedings{behboodi2025,
+title={Leveraging Foundation Models for Calibration-Free {c-VEP} {BCIs}},
+author={Behboodi, Mohammadreza and Kinney-Lang, Eli and Etemad, Ali and Kirton, Adam and Abou-Zeid, Hatem},
+booktitle={2025 IEEE International Conference on Systems, Man, and Cybernetics (SMC)},
+pages={4564--4571},
+year={2025},
+organization={IEEE},
+doi={10.1109/SMC58881.2025.11342650},
+url={https://doi.org/10.1109/SMC58881.2025.11342650}
+}
+
 @article{bohorquez2006,
 title={Signal to noise ratio analysis of maximum length sequence deconvolution of overlapping evoked potentials},
 author={Boh{\'o}rquez, Jorge and {\"O}zdamar, {\"O}zcan},
@@ -367,7 +378,7 @@ url = {https://www.tugraz.at/fileadmin/user_upload/Institute/INE/Proceedings/Pro
 
 @article{fodor2024,
 title={Evaluation of Different Visual Feedback Methods for Brain—Computer Interfaces ({BCI}) Based on Code-Modulated Visual Evoked Potentials ({cVEP})},
-author={Fodor, Mil{\'a}n Andr{\'a}s and Herschel, Hannah and Cant{\"u}rk, Atilla and Heisenberg, Gernot and Volosyak, Ivan},
+author={Fodor, {Mil{\'a}n Andr{\'a}s} and Herschel, Hannah and Cant{\"u}rk, Atilla and Heisenberg, Gernot and Volosyak, Ivan},
 journal={Brain Sciences},
 volume={14},
 number={8},
@@ -380,7 +391,7 @@ url={https://doi.org/10.3390/brainsci14080846}
 
 @inproceedings{fodor2025a,
 title={Evaluation of Efficient and Performance-Retaining {cVEP-BCI} Class Augmentation},
-author={Fodor, Milan Andras and Canturk, Atilla and Heisenberg, Gernot and Volosyak, Ivan and others},
+author={Fodor, {Mil{\'a}n Andr{\'a}s} and Canturk, Atilla and Le, Thi-Phuong-Ngan and Heisenberg, Gernot and Volosyak, Ivan},
 booktitle={2025 13th International Conference on Brain-Computer Interface (BCI)},
 pages={1--6},
 year={2025},
@@ -391,7 +402,7 @@ url={https://doi.org/10.1109/BCI65088.2025.10931291}
 
 @article{fodor2025b,
 title={Streamlining {cVEP} Paradigms: Effects of a Minimized Electrode Montage on Brain–Computer Interface Performance},
-author={Fodor, Mil{\'a}n and Cant{\"u}rk, Atilla and Heisenberg, Gernot and Volosyak, Ivan},
+author={Fodor, {Mil{\'a}n Andr{\'a}s} and Cant{\"u}rk, Atilla and Heisenberg, Gernot and Volosyak, Ivan},
 journal={Brain Sciences},
 volume={15},
 number={6},
@@ -404,13 +415,23 @@ url={https://doi.org/10.3390/brainsci15060549}
 
 @inproceedings{fodor2025c,
 title={Graph-Attentive {CNN} for {cVEP-BCI} with Insights into Electrode Significance},
-author={Fodor, Mil{\'a}n Andr{\'a}s and Volosyak, Ivan},
+author={Fodor, {Mil{\'a}n Andr{\'a}s} and Volosyak, Ivan},
 booktitle={International Work-Conference on Artificial Neural Networks},
 pages={558--571},
 year={2025},
 organization={Springer},
 doi={0.1007/978-3-032-02728-3_45},
 url={https://doi.org/10.1007/978-3-032-02728-3_45},
+}
+
+@inproceedings{fodor2025d,
+title={Towards Visual-Fatigue-Free {BCI} with Imperceptible Visual Evoked Potentials ({I-VEP})},
+author={Fodor, {Mil{\'a}n Andr{\'a}s} and Volosyak, Ivan},
+booktitle={2025 IEEE International Conference on Systems, Man, and Cybernetics (SMC)},
+pages={3812--3818},
+year={2025},
+doi={10.1109/SMC58881.2025.11343413},
+url={https://doi.org/10.1109/SMC58881.2025.11343413},
 }
 
 @inproceedings{gembler2018a,
@@ -524,13 +545,23 @@ doi={10.1109/SMC42975.2020.9282826},
 url={https://doi.org/10.1109/SMC42975.2020.9282826}
 }
 
-@inproceedings{gomel2025,
+@inproceedings{gomel2025a,
 title={Star-Burst paradigm: implementation of an “invisible” dry-{EEG} reactive {BCI}},
-author={Jules, Gomel and Jesus, Torre Tresols Juan and Cimarosto, Pietro and Castillo, Cabrera and Fr{\'e}d{\'e}ric, Dehais and others},
-booktitle={1th International Brain-Computer Interface Meeting 2025},
+author={Gomel, Jules and {Torre Tresols}, {Jesus Juan} and Cimarost, Pietro and {Cabrera Castillo}, Kalou and Dehais, Fr{\'e}d{\'e}ric},
+booktitle={11th International Brain-Computer Interface Meeting 2025},
 year={2025},
 doi={},
 url={https://hal.science/hal-05300721/}
+}
+
+@inproceedings{gomel2025b,
+title={Pre-Decision Feedback in Code-Modulated Visual Evoked Potentials Brain-Computer Interface for an 11-class Keypad Typing Task},
+author={Gomel, Jules and {Torre Tresols}, {Jesus Juan} and Cimarost, Pietro and {Cabrera Castillo}, Kalou and Dehais, Fr{\'e}d{\'e}ric},
+booktitle={2025 IEEE International Conference on Systems, Man, and Cybernetics (SMC)},
+year={2025},
+pages={3800--3805},
+doi={10.1109/SMC58881.2025.11342868},
+url={https://doi.org/10.1109/SMC58881.2025.11342868}
 }
 
 @article{grigoryan2019,
@@ -546,7 +577,7 @@ url = {https://doi.org/10.24075/brsmu.2019.019}
 
 @article{guyonnet2025,
 title={Rapid cortical auditory evoked potentials audiometry},
-author={Guyonnet-Hencke, T and Portoles, O and de Vries, M and Koderman, E and Winkler, A and Goodall, J and Desain, P and Thielen, J and Schulte, M and Beynon, AJ and others},
+author={Guyonnet-Hencke, Timothé and Portoles, Oscar and de Vries, Marten and Koderman, Emma and Winkler, Alexandra and Goodall, Jennifer and Desain, Peter and Thielen, Jordy and Schulte, Michael and Beynon, Andy J and {van Kesteren}, Mark},
 journal={International Journal of Audiology},
 pages={1--11},
 year={2025},
@@ -979,7 +1010,17 @@ doi = {10.3389/fnhum.2023.1227727},
 url = {https://doi.org/10.3389/fnhum.2023.1227727}
 }
 
-@article{morenocalderon2025a,
+@inproceedings{morenocalderon2025a,
+title={Exploring the Integration of {c-VEP}-Based {BCI} Spellers in Mixed Reality: A Pilot Study},
+author={Selene Moreno-Calderón and Víctor Martínez-Cagigal and Ana Martín-Fernández and Eduardo Santamaría-Vázquez and Beatriz Pascual-Roa and Roberto Hornero},
+booktitle={{Advances in Computational Intelligence}},
+pages={584--594},
+year={2025},
+doi = {10.1007/978-3-032-02728-3_47},
+url = {https://doi.org/10.1007/978-3-032-02728-3_47}
+}
+
+@article{morenocalderon2025b,
 title = {Toward the integration of mixed reality and brain-computer interfaces based on code-modulated visual evoked potentials},
 author = {Selene Moreno-Calderón and Víctor Martínez-Cagigal and Ana Martín-Fernández and Eduardo Santamaría-Vázquez and Roberto Hornero},
 journal = {Biocybernetics and Biomedical Engineering},
@@ -1101,7 +1142,7 @@ url = {https://doi.org/10.1109/ICASSP.2012.6287971}
 
 @inproceedings{narayanan2024,
 title={Towards gaze-independent {c-VEP} {BCI}: A pilot study},
-author={Narayanan, S and Ahmadi, S and Desain, P and Thielen, J},
+author={Narayanan, Shekhar and Ahmadi, Sara and Desain, Peter and Thielen, Jordy},
 booktitle={{9th Graz Brain-Computer Interface Conference 2024}},
 year={2024},
 pages={343--348},
@@ -1268,7 +1309,7 @@ url = {https://doi.org/10.1109/EMBC.2016.7590990}
 
 @inproceedings{scheppink2024,
 title={Towards auditory attention decoding with noise-tagging: A pilot study},
-author={Scheppink, HA and Ahmadi, S and Desain, P and Tangermann, M and Thielen, J},
+author={Scheppink, Hanneke A and Ahmadi, Sara and Desain, Peter and Tangermann, Michael and Thielen, Jordy},
 booktitle={{9th Graz Brain-Computer Interface Conference 2024}},
 year={2024},
 pages={337--342},
@@ -1494,7 +1535,7 @@ url = {https://doi.org/10.1371/journal.pone.0133797}
 
 @inproceedings{thielen2016,
 title = {Re(con)volution: accurate response prediction for {BBVEP}-based {BCI}},
-author={Jordy Thielen and Jason Farquhar and Peter Desain},
+author={Thielen, Jordy and Farquhar, Jason and Desain, Peter},
 editor={Gernot R. Müller-Putz and Jane E. Huggins and David Steyrl},
 booktitle={{Proceedings of the Sixth International Brain-Computer Interface Meeting: BCI Past, Present, and Future}},
 year = {2016},
@@ -1541,7 +1582,7 @@ url = {https://doi.org/10.1007/978-3-031-43078-7_45}
 }
 
 @InProceedings{thielen2023b,
-author={Jordy Thielen and Gijs Cornielje and Floris van der Werff and Peter Desain},
+author={Thielen, Jordy and Cornielje, Gijs and {van der Werff}, Floris and Desain, Peter},
 editor={Natalie Mrachacz-Kersting and Jennifer Collinger and Donatella Mattia and Davide Valeriani and Mariska Vansteensel and Gernot Müller-Putz},
 title={A comparison of stimulus sequences for code-modulated visual evoked potential {(c-VEP)} based {BCI}},
 booktitle={{Proceedings of the 10th International Brain-Computer Interface Meeting 2023: Balancing Innovation and Translation}},
@@ -1551,7 +1592,7 @@ url = {https://doi.org/10.3217/978-3-85125-962-9-139}
 }
 
 @dataset{thielen2023dataset,
-author = {Jordy Thielen and Pieter Marsman and Jason Farquhar and Peter Desain},
+author = {Thielen, Jordy and Marsman, Pieter and Farquhar, Jason and Desain, Peter},
 title = {{From full calibration to zero training for a code-modulated visual evoked potentials brain computer interface}},
 year = 2023,
 publisher = {Radboud University},
@@ -1571,7 +1612,7 @@ url={https://doi.org/10.3217/978-3-99161-014-4-057}
 }
 
 @dataset{thielen2024dataset,
-author = {Jordy Thielen and Jason Farquhar and Peter Desain},
+author = {Thielen, Jordy and Farquhar, Jason and Desain, Peter},
 title = {{Broad-Band Visually Evoked Potentials: Re(con)volution in Brain-Computer Interfacing}},
 year = 2024,
 publisher = {Radboud University},
@@ -1608,6 +1649,16 @@ publisher = {Radboud University},
 version = {1},
 doi = {10.34973/6dw9-0924},
 url = {https://doi.org/10.34973/6dw9-0924}
+}
+
+@inproceedings{thielen2025c,
+title={Exploring new territory II: Calibration-free decoding for {ERP} {BCI}},
+author={Thielen, Jordy and Tangermann, Michael},
+booktitle={{2025 IEEE International Conference on Systems, Man, and Cybernetics (SMC)}},
+year={2025},
+pages={3788--3793},
+doi={10.1109/SMC58881.2025.11342596},
+url={https://doi.org/10.1109/SMC58881.2025.11342596}
 }
 
 @article{torres2021,
@@ -1673,7 +1724,7 @@ url = {https://hal.science/hal-04720928/}
 
 @article{verbaarschot2021,
 title={A visual brain-computer interface as communication aid for patients with amyotrophic lateral sclerosis},
-author={Verbaarschot, Ceci and Tump, Dani{\"e}lle and Lutu, Andreea and Borhanazad, Marzieh and Thielen, Jordy and van den Broek, Philip and Farquhar, Jason and Weikamp, Janneke and Raaphorst, Joost and Groothuis, Jan T and others},
+author={Verbaarschot, Ceci and Tump, Dani{\"e}lle and Lutu, Andreea and Borhanazad, Marzieh and Thielen, Jordy and van den Broek, Philip and Farquhar, Jason and Weikamp, Janneke and Raaphorst, Joost and Groothuis, Jan T and Desain, Peter},
 journal={Clinical Neurophysiology},
 volume={132},
 number={10},
