--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -79,7 +79,7 @@
 
 \begin{document}
 	
-\begin{longtable}{p{5cm}p{2cm}p{5cm}p{5cm}p{6.5cm}}[H]
+\begin{longtable}{p{5cm}p{2cm}p{5cm}p{5cm}p{6.5cm}}
 	\textbf{2025} & & & & \\ 
 	\toprule
 	\textbf{Author(s)} & \textbf{Type} & \textbf{Stimulus} & \textbf{Decoding} & \textbf{Notes} \\ 
@@ -89,7 +89,9 @@
 	\citeauthor{fodor2025a} & proceedings & m-sequence & \acrshort{cca} & class augmentation \\
 	\citeauthor{fodor2025b} & article & m-sequence & \acrshort{cca} & number of electrodes, montage \\
 	\citeauthor{fodor2025c} & proceedings & m-sequence & GAT-CNN & Deep learning, multi-head attention and graph neural net, electrode importance \\
-	\citeauthor{gomel2025} & proceedings & burst codes & xDAWN and Riemannian & dry EEG, invisible stimuli \\
+	\citeauthor{fodor2025d} & proceedings & m-sequence & \acrshort{svm}, \acrshort{cnn} & imperceptible stimulation with 60 Hz carrier \\
+	\citeauthor{gomel2025a} & proceedings & burst codes & xDAWN and Riemannian & dry EEG, invisible stimuli \\
+	\citeauthor{gomel2025b} & proceedings & burst codes & xDAWN, \acrshort{lda} & confidence feedback \\
 	\citeauthor{guyonnet2025} & article & Gold code & \acrshort{cca} & auditory hearing diagnostics \\
 	\citeauthor{kiser2025} & proceedings & m-sequence & \acrshort{cca} & authentication \\
 	\citeauthor{le2025} & proceedings & m-sequence & \acrshort{cca} & authentication \\
@@ -98,8 +100,8 @@
 	\citeauthor{martinezcagigal2025a} & article &  &  & Editorial \acrshort{cvep} \\
 	\citeauthor{martinezcagigal2025b} & proceedings &  m-sequence & \acrshort{cca} & asynchronous, early stopping \\
 	\citeauthor{martinezcagigal2025c} & article & binary and non-binary m-sequence & \acrshort{cca} & binary and non-binary codes, spatial frequency, calibration time, comfort \\
-	\citeauthor{morenocalderon2025a} & article & m-sequence & \acrshort{cca} & mixed reality versus screen \\
-	\citeauthor{morenocalderon2025b} & proceedings & m-sequence & \acrshort{cca} & mixed reality versus screen \\
+	\citeauthor{morenocalderon2025a} & proceedings & m-sequence & \acrshort{cca} & mixed reality versus screen \\
+	\citeauthor{morenocalderon2025b} & article & m-sequence & \acrshort{cca} & mixed reality versus screen \\
 	\citeauthor{nair2025} & preprint & m-sequence & \acrshort{cca}, Bayesian \acrshort{lda}, \acrshort{cnn} & deep learning, siamese network \\
 	\citeauthor{santamaria2025} & proceedings & & & calibration-free, deep learning \\
 	\citeauthor{scheppink2025} & proceedings & m-sequence & \acrshort{cca} & scene/object based stimulation \\
@@ -107,6 +109,7 @@
 	\citeauthor{thielen2025a} & article & modulated Gold codes & reconvolution, \acrshort{cca} & implanted, invasive, \acrshort{seeg} \\
 	\citeauthor{thielen2025b} & article & m-sequence, de Bruijn sequence, Golay sequence, Gold sequence, Gold code set, modulated & reconvolution, \acrshort{cca} & BCI inefficiency, performance predictors, binary stimulus sequences \\
 	\citeauthor{thielen2025dataset} & dataset & m-sequence, de Bruijn sequence, Golay sequence, Gold sequence, Gold code set, modulated & & binary stimulus sequences, \acrshort{eeg}, \acrshort{ecg}, \acrshort{sart}, resting-state \\
+%	\citeauthor{thielen2025c} & proceedings & modulated Gold codes & reconvolution, \acrshort{cca}, \acrshort{umm} & calibration-free, instantaneous, cumulative, ERP \\
 	\citeauthor{vodila2025} & proceedings & modulated Gold codes & reconvolution \acrshort{cca} & gaze-independent, covert attention, alpha, ERP, c-VEP \\
 	\citeauthor{yu2025} & article & Gold code & DBFENet, EEGNet, etc. & Robot arm, scene segmentation, deep learning \\
 	\citeauthor{zheng2025} & preprint & \acrshort{nbrs} & \acrshort{fbcca} & calibration-free, 504 targets \\
@@ -134,7 +137,7 @@
 		\citeauthor{scheppink2024} & proceedings & modulated Gold codes & \acrshort{cca} & auditory, \acrshort{caep} \\
 		\citeauthor{shi2024} & article & white-noise & \acrshort{tdca} & maximum information rate \\
 		\citeauthor{sun2024} & article & m-sequence & \acrshort{tdca} & small stimuli (0.5, 1, 2, 3 visual degrees) \\
-		\citeauthor{thielen2024} & proceeding & modulated Gold codes & reconvolution, \acrshort{cca}, \acrshort{umm} & calibration-free \\
+		\citeauthor{thielen2024} & proceeding & modulated Gold codes & reconvolution, \acrshort{cca}, \acrshort{umm} & calibration-free, instantaneous, cumulative \\
 		\citeauthor{thielen2024dataset} & dataset & modulated Gold codes & & \\
 		\citeauthor{velut2024} & proceedings & burst codes & \acrshort{cnn}, SPDNet, transfer learning & subject-to-subject transfer \\
 		\citeauthor{zheng2024a} & article & \acrshort{nbrs} & \acrshort{fbcca} & calibration-free, \acrshort{cvep} versus \acrshort{ssvep} \\
