replace zero-train for calibration-free

--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -199,7 +199,7 @@
 		\midrule
 		\citeauthor{kaya2021} & article & quasi steady-state & \acrshort{clad} & \\
 		\citeauthor{martinezcagigal2021} & article & & & Review \acrshort{cvep} \\
-		\citeauthor{thielen2021} & article & modulated Gold codes & reconvolution, \acrshort{cca} & Zero-training \\
+		\citeauthor{thielen2021} & article & modulated Gold codes & reconvolution, \acrshort{cca} & calibration-free \\
 		\citeauthor{torres2021} & article & \acrshort{apa} sequence, de Bruijn sequence, Golay sequence, m-sequence, Gold code, Kasami sequence & \acrshort{cca}, \acrshort{ica}, \acrshort{pca}, \acrshort{mlp}  & Synthetic \acrshort{eeg} \\
 		\citeauthor{verbaarschot2021} & article & modulated Gold codes & \acrshort{cca} & \acrshort{als} versus healthy participants \\
 		\bottomrule
@@ -220,7 +220,7 @@
 		\citeauthor{huang2020} & article & m-sequence & transfer-learning & Subject-to-subject transfer \\ 
 		\citeauthor{volosyak2020} & article & m-sequence & \acrshort{cca} & \acrshort{ssvep}, \acrshort{ssmvep}, \acrshort{cvep}, \acrshort{bci} illiteracy \\
 		\citeauthor{shirzhiyan2020} & article & periodic, quasi-periodic, chaotic codes & \acrshort{cca} & Fatigue \\
-		\citeauthor{turi2020} & article & m-sequence & \acrshort{cca} &  Auto-calibration, language model, zero training \\
+		\citeauthor{turi2020} & article & m-sequence & \acrshort{cca} &  calibration-free, language model \\
 		\citeauthor{yasinzai2020} & article & m-sequence, random sequence, \acrshort{sop} sequences & \acrshort{cca} & \\
 		\bottomrule
 	\end{tabular}
@@ -278,7 +278,7 @@
 		\citeauthor{nagel2018c} & article & random and optimized sequences & Ridge regression, EEG2Code & \\
 		\citeauthor{nezamfar2018} & article & m-sequence & \acrshort{rda} & Color (green-red), \acrshort{cvep} versus eye tracker \\
 		\citeauthor{spuler2018} & article & m-sequence & \acrshort{cca},  \acrshort{svm} & \acrshort{assr} versus \acrshort{caep} \\
-		\citeauthor{turi2018} & preprint & m-sequence & & Zero-training, language model \\
+		\citeauthor{turi2018} & preprint & m-sequence & & calibration-free, language model \\
 		\citeauthor{wei2018} & article & grouping modulation, Golay complementary sequences, \acrshort{apa} sequence & \acrshort{cca} & \\
 		\bottomrule
 	\end{tabular}
@@ -294,7 +294,7 @@
 		\citeauthor{isaksen2017} & article & m-sequence, Gold code, Barker code & correlation & \\
 		\citeauthor{nagel2017} & proceedings & m-sequence, random codes & \acrshort{cca} & \\
 		\citeauthor{spuler2017} & article & m-sequence & \acrshort{cca} & Dry \acrshort{eeg}, static and dynamic stopping \\
-		\citeauthor{thielen2017} & chapter & modulated Gold codes & reconvolution, \acrshort{cca} & Zero-training \\
+		\citeauthor{thielen2017} & chapter & modulated Gold codes & reconvolution, \acrshort{cca} & calibration-free \\
 		\citeauthor{wei2017} & article & grouping modulation, Golay sequence, \acrshort{apa} sequence & \acrshort{cca} & \\
 		\citeauthor{wittevrongel2017} & article & m-sequence & beamformer & \\
 		\bottomrule
