add santamaria-vazquez 2024

--- a/cvep-literature.bib
+++ b/cvep-literature.bib
@@ -1272,6 +1272,17 @@ doi = {10.1007/978-3-031-43078-7_49},
 url = {https://doi.org/10.1007/978-3-031-43078-7_49}
 }
 
+@inproceedings{santamaria2024,
+	title={Towards Calibration-Free User-Friendly {c-VEP}-Based {BCIs}: An Exploratory Study Using Deep-Learning},
+	author={Santamar{\'\i}a-V{\'a}zquez, Eduardo and Mart{\'\i}nez-Cagigal, V{\'\i}ctor and Ruiz-G{\'a}lvez, Rub{\'e}n and Mart{\'\i}n-Fern{\'a}ndez, Ana and Pascual-Roa, Beatriz and Hornero, Roberto},
+	booktitle={International Conference on NeuroRehabilitation},
+	pages={685--689},
+	year={2024},
+	organization={Springer},
+	doi={10.1007/978-3-031-77588-8_134},
+	url={https://doi.org/10.1007/978-3-031-77588-8_134}
+}
+
 @InProceedings{santamaria2025,
 author={Santamar{\'i}a-V{\'a}zquez, Eduardo and Mart{\'i}nez-Cagigal, V{\'i}ctor and Ruiz-G{\'a}lvez, Rub{\'e}n and Mart{\'i}n-Fern{\'a}ndez, Ana and Pascual-Roa, Beatriz and Hornero, Roberto},
 editor={Pons, Jose L. and Tornero, Jesus and Akay, Metin},
