--- a/cvep-literature.tex
+++ b/cvep-literature.tex
@@ -134,6 +134,7 @@
 		\citeauthor{miao2024b} & proceedings & m-sequence & EEG2Code, EEGNet, ShallowConvNet, DeepConvNet, ShallowNet & deep learning, transfer-learning, fine-tuning \\
 		\citeauthor{narayanan2024} & proceedings & modulated Gold codes & \acrshort{cca} & gaze-independent, covert attention \\
 		\citeauthor{qu2024} & article & m-sequence & \acrshort{cca} & biometrics \\
+		\citeauthor{santamaria2024} & proceedings & non-binary m-sequence & EEG-Inception & calibration-free, deep learning \\
 		\citeauthor{scheppink2024} & proceedings & modulated Gold codes & \acrshort{cca} & auditory, \acrshort{caep} \\
 		\citeauthor{shi2024} & article & white-noise & \acrshort{tdca} & maximum information rate \\
 		\citeauthor{sun2024} & article & m-sequence & \acrshort{tdca} & small stimuli (0.5, 1, 2, 3 visual degrees) \\
